--- a/ubuntu18-simulators/Dockerfile
+++ b/ubuntu18-simulators/Dockerfile
@@ -122,3 +122,58 @@ RUN mkdir -p -m 777 /simulators/ndnSIM && \
     cd ns-3 && \
     ./waf configure --enable-examples && \
     ./waf
+
+# Compiling VSCODE
+RUN apt update && \
+	apt install -y \
+	wget \
+	software-properties-common \
+	apt-transport-https \
+	gconf-service \
+	libasound2 \
+	libatk1.0-0 \
+	libc6 libcairo2 \
+	libcups2 \
+	libdbus-1-3 \
+	libexpat1 \
+	libfontconfig1 \
+	libgcc1 \
+	libgconf-2-4 \
+	libgdk-pixbuf2.0-0 \
+	libglib2.0-0 \
+	libgtk-3-0 \
+	libnspr4 \
+	libpango-1.0-0 \
+	libpangocairo-1.0-0 \
+	libstdc++6 \
+	libx11-6 \
+	libx11-xcb1 \
+	libxcb1 \
+	libxcomposite1 \
+	libxcursor1 \
+	libxdamage1 \
+	libxext6 \
+	libxfixes3 \
+	libxi6 \
+	libxrandr2 \
+	libxrender1 \
+	libxss1 \
+	libxtst6 \
+	ca-certificates \
+	fonts-liberation \
+	libappindicator1 \
+	libnss3 \
+	lsb-release \
+	xdg-utils && \
+	apt clean && \
+	rm -rf /var/lib/apt/lists/*
+
+RUN wget -q https://packages.microsoft.com/keys/microsoft.asc -O- | apt-key add -
+RUN add-apt-repository "deb [arch=amd64] https://packages.microsoft.com/repos/vscode stable main"
+
+RUN apt update && \
+	apt install -y \
+	code && \
+	apt clean && \
+	rm -rf /var/lib/apt/lists/*
+
