--- a/ubuntu18-ns3-ndn/Dockerfile
+++ b/ubuntu18-ns3-ndn/Dockerfile
@@ -120,7 +120,7 @@ RUN mkdir -p -m 777 /simulators/ndnSIM && \
     git clone https://github.com/named-data-ndnSIM/pybindgen.git pybindgen && \
     git clone --recursive https://github.com/named-data-ndnSIM/ndnSIM.git ns-3/src/ndnSIM && \
     cd ns-3 && \
-    ./waf configure --enable-examples && \
+    ./waf -d optimized configure --enable-examples && \
     ./waf
 
 # Compiling VSCODE
